--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="btnMove"
-        android:text="Button" />
+    <TextureView
+        android:id="@+id/texture_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <com.example.submarine.cam.widget.FaceRectView
+        android:id="@+id/face_rect_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.example.submarine.background.BgLayout
         android:id="@+id/BgLayout"
@@ -28,5 +30,12 @@
         android:layout_height="match_parent">
 
     </com.example.submarine.fg.FgLayout>
+
+    <TextView
+        android:id="@+id/log"
+        android:layout_width="106dp"
+        android:layout_height="38dp"
+        android:text="TextView"
+        android:textSize="16sp" />
 
 </FrameLayout>
